--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Moviewer",
   "version": "1.0.0",
   "description": "movie service",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "homepage": "https://github.com/SialGitHub/Moviewer#readme",
   "scripts": {
     "prebuild": "rm -rf dist/* && tslint -c tslint.json -p tsconfig.json --fix",
@@ -23,7 +23,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.8"
+    "mongoose": "^5.10.8",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
@@ -32,6 +33,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
+    "@types/uuid": "^8.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "dot": "^1.1.3",
     "env": "0.0.2",
